--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>html</title>
 </head>
 <body>
-ram ram ji yeh website abhi ban rahi hai testing phase me hai !!! developer choki pe kam chal ro hai !!!!!!
+Building ASI
     
 </body>
 </html>
